--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./dist --env=production",
+    "start": "node ./dist/src --env=production",
     "dev": "nodemon --delay 3000ms",
-    "test": "mocha -r ts-node/register 'tests/**/*.ts'"
+    "test": "mocha -r ts-node/register 'tests/**/*.ts' --exit"
   },
   "keywords": [],
   "author": "",
@@ -27,11 +27,13 @@
     "ts-node": "^9.1.1"
   },
   "dependencies": {
+    "chai": "^4.2.0",
     "express": "^4.17.1",
     "helmet": "^4.2.0",
     "http-status-codes": "^2.1.4",
     "knex": "^0.21.15",
     "morgan": "^1.10.0",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "typescript": "^4.1.3"
   }
 }
